recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:10: error: not found: value lenght
		return  spiral( steps-1, angle, lenght + increment, increment)
                                                ^